Made all references unique to this paper/chapter.

--- a/paper1.tex
+++ b/paper1.tex
@@ -13,7 +13,7 @@ M_{\odot}$
 
 
 \subsection{Binary Formation in High-Mass Stars}
-\label{sec:formation}
+\label{paper1_sec:formation}
 With such a high fraction of high-mass stars found in binary or multiple
 systems, any theory of high-mass star formation should be able to
 explain the high binary formation rate. There are several mechanisms by
@@ -117,7 +117,7 @@ formation by creating $\sim 10M_{Jup}$ planets and substellar companions.
 
 
 \subsection{Observing low mass-ratio binaries}
-\label{sec:otherobs}
+\label{paper1_sec:otherobs}
 Detection of OB-star binaries with mass-ratio $q \approx 0.1$ or lower is very
 difficult, since the ratio of the secondary flux $F_s$ to the primary
 flux $F_p$ is $F_s/F_p \sim 10^{-3}$ or lower in the V-band. Imaging surveys
@@ -154,8 +154,8 @@ x-ray emitters \citep{Gagne1997} and will drown out any companions.
   \includegraphics[width=\columnwidth]{Figures/paper1_fig1.pdf}
   \caption{This figure illustrates the approximate flux ratio limit to
   the detection method outlined in section
-  \ref{sec:newmethod}. \emph{Top panel}: Residuals after telluric
-  correction (see section \ref{sec:reduction}) for chip 2 of HIP 80582 are in black, with an
+  \ref{paper1_sec:newmethod}. \emph{Top panel}: Residuals after telluric
+  correction (see section \ref{paper1_sec:reduction}) for chip 2 of HIP 80582 are in black, with an
   atmosphere model for an $0.9 M_{\odot}$ star at 50.1 Myr below it in
   red. The flux ratio at this age is $F_s/F_p = 0.0092$. \emph{Middle panel}: The scaled model
   spectrum was added to the telluric residuals, and then the sum was
@@ -166,7 +166,7 @@ cross-correlation function, shows that the significance of the peak is over
 $4\sigma$. \emph{Bottom panel}: Same as the middle panel, but the
 model spectrum was added to the residuals with a 50 km s$^{-1}$ velocity
 offset.}
-  \label{method}
+  \label{paper1_fig:method}
 \end{figure*}
 
 In this paper, we introduce a technique that is sensitive to young binary
@@ -174,7 +174,7 @@ systems with secondary temperatures $4000$ K $\lesssim T_\mathrm{eff} \lesssim
 6000 $K. For early B-type primaries with ages $\sim 15$ Myr, these
 temperatures correspond to mass-ratios $q \approx 0.05-0.3$, right
 where we expect to see binaries formed by disk instability (see
-section \ref{sec:formation}). Rather
+section \ref{paper1_sec:formation}). Rather
 than attempting to detect the reflex motion of the parent
 star as in exoplanet searches and SB1 binaries, we attempt to directly
 detect the spectrum of the young low-mass companion using high
@@ -182,17 +182,17 @@ signal-to-noise, high-resolution data. There is a multitude of archived B-star o
 where they are used as telluric standard stars to remove the absorption spectrum of the Earth's atmosphere (telluric
 lines). This method is equally sensitive to all separations within the point spread function, which is dominated by the seeing since the adaptive optics are not used in telluric standard star observations. A typical seeing of $\sim 0.8''$ corresponds to up to $\sim 900$ AU for targets within a few kpc. In this paper, we describe a search for young F5-K9 type companions in archived VLT/CRIRES spectra of 34 early B-type stars.
 
-In section \ref{sec:newmethod} we describe our detection method in 
-more detail. Section \ref{sec:sample} describes the B-star sample we use in this work.
-Section \ref{sec:reduction} contains the data reduction and telluric correction methods. 
-We summarize our results in section \ref{sec:results}. We examine the
-completeness of our sample in section \ref{sec:completeness} and put
+In section \ref{paper1_sec:newmethod} we describe our detection method in 
+more detail. Section \ref{paper1_sec:sample} describes the B-star sample we use in this work.
+Section \ref{paper1_sec:reduction} contains the data reduction and telluric correction methods. 
+We summarize our results in section \ref{paper1_sec:results}. We examine the
+completeness of our sample in section \ref{paper1_sec:completeness} and put
 limits on the multiplicity fraction as a function of mass-ratio in
-section \ref{sec:multiplicity}. Finally, we present our conclusions about the prevalence of low mass-ratio companions to early B-type stars and discuss how our results constrain star formation mechanisms in Section \ref{sec:conclusions}.
+section \ref{paper1_sec:multiplicity}. Finally, we present our conclusions about the prevalence of low mass-ratio companions to early B-type stars and discuss how our results constrain star formation mechanisms in Section \ref{paper1_sec:conclusions}.
 
 
 \section{Direct Spectral Detection Method}
-\label{sec:newmethod}
+\label{paper1_sec:newmethod}
 
 We describe here our method to detect the emission from an
 approximately solar-mass star orbiting an early B-type star, which we
@@ -204,8 +204,8 @@ in the cross-correlation function at the radial velocity corresponding to
 the low-mass star's motion. A peak in the cross-correlation
 function should appear even if the
 flux from the low-mass star is comparable to or even slightly less than the noise level in the
-spectrum. Figure \ref{method} illustrates the approximately limiting
-case for the flux ratio. The top panel shows a fully reduced CRIRES spectrum of HIP 108975 (see section \ref{sec:reduction}) with a model spectrum for an $0.9 M_{\odot}$ star at a realistic flux ratio below it. We used
+spectrum. Figure \ref{paper1_fig:method} illustrates the approximately limiting
+case for the flux ratio. The top panel shows a fully reduced CRIRES spectrum of HIP 108975 (see section \ref{paper1_sec:reduction}) with a model spectrum for an $0.9 M_{\odot}$ star at a realistic flux ratio below it. We used
 evolutionary tracks published by \cite{Landin2008} to evolve the secondary star
 to 50.1 Myr, the age of the system \citep{Tetzlaff2010}, in order to determine the flux
 ratio between the primary and secondary. The secondary star model was then added to
@@ -224,7 +224,7 @@ have a peak with high significance at the velocity of the secondary star.
     with $\log (g) = 4.0$ and solar metallicity. Note that the line density of telluric
     lines is comparable to or greater than that of the star model, and many of the
     telluric lines are stronger than the stellar lines.}
-  \label{telluric}
+  \label{paper1_fig:telluric}
 \end{figure*}
 
 A careful choice of the wavelength region is critical for the direct spectral 
@@ -269,11 +269,11 @@ small, we need the resolution of the instrument to be $R =
 
 There are two main difficulties with the direct spectral detection method: 
 telluric line removal and the low flux ratio between the primary and secondary
-star. Figure \ref{telluric} shows the transmittance through the
+star. Figure \ref{paper1_fig:telluric} shows the transmittance through the
 Earth's atmosphere (the telluric spectrum) in the wavelength range we
 are interested in. Most of the spectral lines are from methane, with a
 few deep water lines towards the red end
-of the range shown (See section \ref{sec:reduction} for details on the
+of the range shown (See section \ref{paper1_sec:reduction} for details on the
 telluric line removal). The low flux ratio makes the telluric
 contamination especially troublesome, since the telluric lines are
 stronger than the lines in the companion star spectrum. The flux ratio of $F_s/F_p
@@ -288,7 +288,7 @@ to have a good chance of detecting a companion.
 
 
 \section{Star Sample}
-\label{sec:sample}
+\label{paper1_sec:sample}
 B-type stars are commonly used in the near-IR as telluric
 standard stars. Astronomers will observe their science targets, and
 then move to a B-type star. Since B-type stars have few
@@ -314,7 +314,7 @@ with roughly 1-2 nm gaps between the chips.
 
 To generate the sample, we started with all single, main sequence B0-B5 stars 
 with CRIRES observations from 2300-2400 nm. We then excluded any shell stars, which have circumstellar disks \citep{Porter2003} that may create
-false positives. Table \ref{tab:sample} shows the complete sample used in this
+false positives. Table \ref{paper1_tab:sample} shows the complete sample used in this
 project. The spectral types and ages were obtained from a catalog of nearby
 young stars \citep{Tetzlaff2010}. The one exception is HIP 97611, which was
 not in \cite{Tetzlaff2010}. For this star, the age was taken from
@@ -345,7 +345,7 @@ detector wavelength setting as one observation.
 
 
 \section{Data Reduction and Telluric Correction}
-\label{sec:reduction}
+\label{paper1_sec:reduction}
 The data reduction was done using standard methods in
 IRAF\footnote{IRAF is distributed by the National Optical Astronomy Observatories,
     which are operated by the Association of Universities for Research
@@ -401,7 +401,7 @@ essence used the stock HITRAN 2008 database. However,
 in the process of modeling, we found several water and methane lines
 that were consistently under- or over-fit. For these cases, we
 manually adjusted the line strengths in the database. The line
-strengths were fit visually and should not be considered rigourous new line strengths. Table \ref{tab:linelist}
+strengths were fit visually and should not be considered rigourous new line strengths. Table \ref{paper1_tab:linelist}
 summarizes these changes.
 
 
@@ -437,7 +437,7 @@ second fit, we first attempted to fit a Gaussian to each spike. If the
 spike was well fit by a Gaussian, we divided the residuals by the fit.
 If not, we
 simply masked out the line core, so that it would not affect the
-cross-correlation in later analysis (see section \ref{sec:newmethod}). Figure
+cross-correlation in later analysis (see section \ref{paper1_sec:newmethod}). Figure
 \ref{correctionsteps} shows the steps involved in the telluric
 correction. Notice that the secondary correction removes the
 large residuals, while leaving the rest of the spectrum
@@ -461,7 +461,7 @@ wavelength settings with fewer than ten individual spectra in our sample.
 
 
 \section{Results}
-\label{sec:results}
+\label{paper1_sec:results}
 Each telluric residual spectrum was cross-correlated against a suite of model atmospheres
 generated by the Phoenix stellar atmosphere code \citep{Hauschildt1999}. All model spectra had solar metallicity. The effective
 temperatures ranged from $3000-7200$ K, in 100K intervals. We used
@@ -507,8 +507,8 @@ reject the candidate.
   \centering
   \includegraphics[width=\columnwidth]{Figures/paper1_fig4.pdf}
   \caption{Cross-correlation for HIP 26713, using a 5600 K star model spectrum as template. The y-axis is in units of
-    the standard deviation of the cross-correlation function. The peak is very near the maximum velocity of $|v_\mathrm{max}| = 256$ km s$^{-1}$, assuming a circular orbit (see equation \ref{eqn:vmax}). The likelihood of observing the system nearly edge on and at a quadrature point, so that $|v| \sim |v_\mathrm{max}|$, is $p \approx 0.01$. However, it is possible that the system has an eccentric orbit, effectively increasing $|v_\mathrm{max}|$.}
-  \label{fig:hip26713}
+    the standard deviation of the cross-correlation function. The peak is very near the maximum velocity of $|v_\mathrm{max}| = 256$ km s$^{-1}$, assuming a circular orbit (see equation \ref{paper1_eqn:vmax}). The likelihood of observing the system nearly edge on and at a quadrature point, so that $|v| \sim |v_\mathrm{max}|$, is $p \approx 0.01$. However, it is possible that the system has an eccentric orbit, effectively increasing $|v_\mathrm{max}|$.}
+  \label{paper1_fig:hip26713}
 \end{figure*}
 
 Next, we determined whether the signal-to-noise ratio and telluric line removal in a given observation would allow us to detect the candidate companion star.
@@ -521,7 +521,7 @@ such that the stellar surfaces are in contact. The flux ratio of the model atmos
 interpolating pre-main-sequence evolutionary tracks from
 \cite{Landin2008} at the age of the system, as well at age$\pm
 \sigma_{age}$. The primary star ages for our sample are given in Table
-\ref{tab:sample}. We cross-correlated each of these semi-synthetic
+\ref{paper1_tab:sample}. We cross-correlated each of these semi-synthetic
 spectra against the model spectrum; if the largest
 peak was at the correct velocity, we counted the star as
 detected. If the star was not detected in the sensitivity
@@ -540,7 +540,7 @@ $v_\mathrm{max}$ is given by
 
 \begin{equation}
 v_\mathrm{max} = \sqrt{\frac{2G(M_\mathrm{prim} + M_\mathrm{sec})}{R_\mathrm{prim}}} \cdot \frac{T_\mathrm{sec}}{T_\mathrm{prim}}
-\label{eqn:vmax}
+\label{paper1_eqn:vmax}
 \end{equation}
 
 where $M_\mathrm{prim}$ and $M_\mathrm{sec}$ are the masses of the primary and
@@ -548,7 +548,7 @@ secondary stars, respectively, and $R_\mathrm{prim}$ is the radius of the
 primary star. The primary masses are given in \cite{Tetzlaff2010}, while
 the radii and primary star temperatures were estimated from spectral type relations given in
 \cite{CarrollOstlie}. An eccentric orbit could have a larger maximum velocity than
-that estimated by equation \ref{eqn:vmax}, if the orbit was oriented
+that estimated by equation \ref{paper1_eqn:vmax}, if the orbit was oriented
 such that the the secondary star was moving directly towards or away from earth at or near
 periastron. A star in an eccentric orbit cannot get so close to the
 primary that they touch, and its \emph{average} distance must still be
@@ -557,17 +557,17 @@ conditions lead to a maximum eccentricity, given by
 
 \begin{equation}
 e_\mathrm{max} = 1 - \frac{v_\mathrm{max}^2 (R_\mathrm{prim} + R_\mathrm{sec})}{G(M_\mathrm{prim} + M_\mathrm{sec})}
-\label{eqn:emax}
+\label{paper1_eqn:emax}
 \end{equation}
 
 where $R_\mathrm{prim} $ and $R_\mathrm{sec}$ are the radii of the primary
 and secondary stars, respectively, and $v_\mathrm{max}$ is the maximum
-circular velocity given by equation \ref{eqn:vmax}. Typical values
+circular velocity given by equation \ref{paper1_eqn:vmax}. Typical values
 give $e_\mathrm{max} \approx 0.6$. Eccentricities near this value could
 allow for velocities significantly greater than $v_\mathrm{max}$ given by
-equation \ref{eqn:vmax}.
+equation \ref{paper1_eqn:vmax}.
 
-The above analysis is summarized in Table \ref{tab:rejection}. There
+The above analysis is summarized in Table \ref{paper1_tab:rejection}. There
 are two binary candidate systems that we have not been able to reject.
  For both of these, we checked what other observations the candidate
 star had within the CO bandhead spectral region ($2300-2400$ nm). The analysis of each
@@ -578,19 +578,19 @@ of these stars is done separately below.
 
 \subsection{HIP 26713}
 The cross-correlation for this candidate is shown in figure
-\ref{fig:hip26713}. The strong peak at -220 km s$^{-1}$ has a
+\ref{paper1_fig:hip26713}. The strong peak at -220 km s$^{-1}$ has a
 significance just over $4\sigma$, and corresponds to a 5600 K star
-model. A sensitivity analysis (Table \ref{tab:rejection}, step 2) gives a median peak significance of $\sim 6\sigma$
+model. A sensitivity analysis (Table \ref{paper1_tab:rejection}, step 2) gives a median peak significance of $\sim 6\sigma$
 with a large ($\sim 2\sigma$) spread. Due to the large spread, we cannot reject
 the peak based on the observed significance.
 
 The candidate radial velocity amplitude of 220 km s$^{-1}$ is very near the upper limit 
-given by equation \ref{eqn:vmax} of 256 km s$^{-1}$. If this candidate is a real binary companion, it
+given by equation \ref{paper1_eqn:vmax} of 256 km s$^{-1}$. If this candidate is a real binary companion, it
 must have been observed very near its radial velocity maximum and the orbital inclination must be very
 near edge-on. Assuming a circular orbit and equal probabilities
 of observing any given phase or inclination, the probability of this
 occuring for this system is $\sim 0.01$. However, the probability for one system in our entire sample to be caught with this chance alignment rises to $0.14$.  In addition, we cannot discount the
-possibility of an eccentric orbit leading to a higher value of $v_\mathrm{max}$ than estimated by equation \ref{eqn:vmax}. Without more data, we can neither confirm nor disprove the existence of a companion star orbiting HIP 26713.
+possibility of an eccentric orbit leading to a higher value of $v_\mathrm{max}$ than estimated by equation \ref{paper1_eqn:vmax}. Without more data, we can neither confirm nor disprove the existence of a companion star orbiting HIP 26713.
   
 If HIP 26713 is a true binary system, evolutionary tracks by \cite
 {Landin2008} give a secondary star mass of $1.6 \pm 0.2 M_{\odot}$. 
@@ -605,35 +605,35 @@ The mass of the primary star is $9.4 \pm 0.2 M_{\odot}$ \citep
     cross-correlations from 2007 May 9, 2007 August 2, 2008 September
     19, and 2008 October 10. The reasonably strong peak on 2007 June 9 is identified
   as probably arising from imperfect telluric line removal or random noise, since it
-  has $v>v_\mathrm{max}$ given by equation \ref{eqn:vmax}.}
-  \label{fig:hip92855}
+  has $v>v_\mathrm{max}$ given by equation \ref{paper1_eqn:vmax}.}
+  \label{paper1_fig:hip92855}
 \end{figure*}
 
 
 
 
 \subsection{HIP 92855}
-\label{sec:hip92855}
+\label{paper1_sec:hip92855}
 There were seven observations of HIP 92855 on different dates, all with the 2336 nm
 wavelength setting. The cross-correlations for four of the observation dates show
 a single strong peak when using a 6100K model star as template. Figure
-\ref{fig:hip92855} shows the cross-correlations of the
+\ref{paper1_fig:hip92855} shows the cross-correlations of the
 telluric-corrected spectra with a 6100K model for all of the
-observations. Table \ref{tab:hip92855} summarizes the sensitivity and
+observations. Table \ref{paper1_tab:hip92855} summarizes the sensitivity and
 cross-correlation significance. The detection rate is the fraction of the 17
 radial velocities between -400 and 400 km s$^{-1}$ that were correctly detected in the sensitivity
-analysis (Table \ref{tab:rejection}, step 2). The variation in detection rate is due to the different
+analysis (Table \ref{paper1_tab:rejection}, step 2). The variation in detection rate is due to the different
 signal-to-noise levels and telluric line corrections in the observations
 at different dates. The expected significance is the median significance of
 the radial velocities which were detected in the sensitivity analysis, in units of
 the standard deviation of the cross-correlation function. The observed
-significance and velocity are for the observed peaks. The velocities in Table \ref{tab:hip92855} are corrected for
+significance and velocity are for the observed peaks. The velocities in Table \ref{paper1_tab:hip92855} are corrected for
 the barycentric motion and the known systematic radial velocity of HIP 92855,
-while those in Figure \ref{fig:hip92855} are not.
+while those in Figure \ref{paper1_fig:hip92855} are not.
 
 
 
-As Table \ref{tab:hip92855} shows, a 6100K star orbiting HIP 92855 is at
+As Table \ref{paper1_tab:hip92855} shows, a 6100K star orbiting HIP 92855 is at
 the limit of detectability with the direct spectral detection
 method. With the exception of the observation on 2007 September 16, the
 cross-correlations for the dates with the highest detection rates have
@@ -652,9 +652,9 @@ follow-up observations.
   telluric line removal, and counts any telluric residuals as
   noise. The figures are also color-coded by the fraction of trials
   that detected the companion (see section
-  \ref{sec:completeness}). Contours are drawn to guide the eye. The red 
+  \ref{paper1_sec:completeness}). Contours are drawn to guide the eye. The red 
   areas in each plot indicate the regions for which our sample is complete.}
-  \label{fig:completeness}
+  \label{paper1_fig:completeness}
 \end{figure*}
 
 If HIP 92855 is a true binary system, evolutionary tracks by
@@ -666,7 +666,7 @@ ratio of $q = 0.15 \pm 0.04$. The maximum radial velocity, observed on 2007 Augu
 
 
 \section{Completeness}
-\label{sec:completeness}
+\label{paper1_sec:completeness}
 We now estimate the completeness of the direct spectral detection
 method applied to this data set. For each telluric-corrected observation, we
 created a series of synthetic binary-star spectra by adding stellar models to
@@ -675,7 +675,7 @@ velocities. We used evolutionary tracks from \cite{Landin2008} to
 find the luminosity of model companion stars with temperatures ranging from 3000K to
 7000K in steps of 500 K. To find the model flux ratio $F_s/F_p$, we
 used the best-fit age for each star quoted in
-Table \ref{tab:sample}, as well as the best-fit age$\pm
+Table \ref{paper1_tab:sample}, as well as the best-fit age$\pm
 \sigma_{age}$. Model secondary spectra generated with the Phoenix code
 \citep{Hauschildt1999} were added to the telluric-corrected
 observations at 17 different radial velocities ranging
@@ -688,7 +688,7 @@ correlation function.
 If the highest peak in the cross-correlation function was at the
 correct velocity, the companion was considered detected. We then
 tabulated how many times the companion star was detected in the 17
-radial velocity trials. Figure \ref{fig:completeness} shows the
+radial velocity trials. Figure \ref{paper1_fig:completeness} shows the
 fraction of trials that detected the companion for all of the model
 radial velocities, as a function of primary (B-star) mass and the binary mass-ratio. The points
 correspond to individual spectra, with their sizes indicating the
@@ -700,7 +700,7 @@ without much higher signal-to-noise ratios than present in our dataset, and star
 5400 K do not have a strong CO bandhead and so the cross-correlation
 function is not as sensitive. 
 
-Figure \ref{fig:completeness} shows that the direct spectral detection
+Figure \ref{paper1_fig:completeness} shows that the direct spectral detection
 method is able to find companion stars with a mass-ratio of $q\approx
 0.1-0.2$, for a range of effective temperatures. The regions with a 
 detection rate near 1 are completely sampled, and a companion star in 
@@ -722,17 +722,17 @@ that region would be detected. For primary stars with $M < 10 M_{\odot}$, we are
     fraction found by \cite{Evans2011} is also shown (dash-dot blue line). The
     \cite{Evans2011} value is a \emph{lower} limit and an average over all mass-ratios from $0.1 < q < 0.3$, but they estimate
     that their sample is very complete, and so the true multiplicity fraction is quite close to their value.}
-  \label{fig:limits}
+  \label{paper1_fig:limits}
 \end{figure*}
 
 
 \section{Multiplicity Fraction}
-\label{sec:multiplicity}
+\label{paper1_sec:multiplicity}
 
 We have not found any unambiguous low mass-ratio companions in our
 sample, though we do have two candidates that require follow-up
 observations (HIP 92855 amd HIP 26713). From the work described in section
-\ref{sec:completeness}, we define a range
+\ref{paper1_sec:completeness}, we define a range
 of mass-ratios for which the direct spectral detection method is
 sensitive for each primary (B-) star. We can then rule out any
 companions with mass-ratios in that range, for that primary star.
@@ -747,7 +747,7 @@ fraction p is given by
 
 \begin{equation}
 P(k|p,n) = \frac{n!}{k!(n-k)!}p^k(1-p)^{n-k}
-\label{eqn:binomial}
+\label{paper1_eqn:binomial}
 \end{equation}
 
 For no detected binary companions (k=0), the corresponding likelihood
@@ -755,36 +755,36 @@ function for the binary fraction is
 
 \begin{equation}
 P(p|k=0, n) = (n+1)\cdot  (1-p)^n
-\label{eqn:likelihood}
+\label{paper1_eqn:likelihood}
 \end{equation}
 
 A $90\%$ upper limit is given by
 
 \begin{equation}
 0.9 = \int_0^p (n+1)\cdot  (1-p')^n dp'
-\label{eqn:limitdef}
+\label{paper1_eqn:limitdef}
 \end{equation}
 
 with solution
 
 \begin{equation}
 p_{90} = 1 - 0.1^{\frac{1}{n+1}}
-\label{eqn:limit}
+\label{paper1_eqn:limit}
 \end{equation}
 
 A similar derivation gives $90\%$ upper limits for one detection (k=1).
-Figure \ref{fig:limits} shows the $90\%$ upper limits to the binary
+Figure \ref{paper1_fig:limits} shows the $90\%$ upper limits to the binary
 fraction as a function of mass-ratio. To find n in equation
-\ref{eqn:limit}, we counted the number of stars that ruled out a
+\ref{paper1_eqn:limit}, we counted the number of stars that ruled out a
 companion at the given mass-ratio. We only counted companions that
 were found in all 17 radial velocity trials (see section
-\ref{sec:completeness}), and were always found with at least $4\sigma$
+\ref{paper1_sec:completeness}), and were always found with at least $4\sigma$
 significance. We also included upper limits assuming that HIP 92855, the more likely of our two candidates, is
-a true binary system. Figure \ref{fig:limits} also shows the lower
+a true binary system. Figure \ref{paper1_fig:limits} also shows the lower
 multiplicity limit set by \cite{Evans2011} (blue dotted line) and the
 \emph{intrinsic} O star mass-ratio distribution derived by
 \cite{Sana2012}. \cite{Evans2011} do not split their multiplicity by mass-ratio,
-and so the line shown in figure \ref{fig:limits} is an average value. While
+and so the line shown in figure \ref{paper1_fig:limits} is an average value. While
 we include them for comparison with our results, neither of these studies are
 directly comparable to our sample. \cite{Sana2012} have only O stars in
 their sample and are only able to measure mass-ratios $q\approx
@@ -799,7 +799,7 @@ primaries, and \cite{Evans2011} who measure the binary fraction of
 less massive primaries than we do.
 
 The above analysis assumes that the sample of B-stars given in Table
-\ref{tab:sample} is representative of the B-star population as a
+\ref{paper1_tab:sample} is representative of the B-star population as a
 whole. Most of the sample stars are field
 B-stars, which have a lower overall multiplicity than cluster or
 association B-stars \citep{Mason2009}. However, the close binaries this
@@ -810,7 +810,7 @@ sample to be representative of both populations. A potential complication is tha
 
 
 \section{Conclusion}
-\label{sec:conclusions}
+\label{paper1_sec:conclusions}
 We have described a new technique for finding binary systems with a
 flux ratio of $F_p/F_s \approx 100$, where $F_p$ and $F_s$ are
 the fluxes from the primary and secondary star, respectively. In this
@@ -823,13 +823,13 @@ peak in the cross-correlation function.
 
 We prove the feasibility of the direct spectral detection method by
 adding a synthetic signal to real data, and successfully recovering
-it. We further investigate the completeness of the method in section \ref{sec:completeness}. This method is sensitive to detecting a range of companion stars, set by the spectral type and age of the primary and the signal-to-noise ratio of the observation. Our sample is sensitive to almost all companion stars with $4600 < T < 5400$, corresponding to binary mass-ratios of $0.1 \lesssim q \lesssim 0.2$.
+it. We further investigate the completeness of the method in section \ref{paper1_sec:completeness}. This method is sensitive to detecting a range of companion stars, set by the spectral type and age of the primary and the signal-to-noise ratio of the observation. Our sample is sensitive to almost all companion stars with $4600 < T < 5400$, corresponding to binary mass-ratios of $0.1 \lesssim q \lesssim 0.2$.
 
  We have applied this technique to a sample of 34 archived main sequence 
 early B-stars (B0-B5) with spectra taken with the CRIRES near-infrared
 spectrograph. We found no unambiguous companions in our sample, but identify two targets as candidate binary systems: HIP 92855 and HIP 26713. HIP 92855 is B2.5V type star, with a candidate companion star with effective temperature $T = 6100$ K and mass $1.2 \pm 0.2 M_{\odot}$. Such a companion star is very near the detection limit of the direct spectral detection technique and deserves further follow-up observations. HIP 26713 is a B1.5V type star, with a candidate companion star with $T = 5600$ K and $M = 1.6 \pm 0.2 M_{\odot}$. This star was only observed once in our sample, and so may be a series of incompletely removed telluric absorption lines masquerading as a companion star.
 
-We set upper limits on the binary fraction of early B stars as a function of binary mass-ratio (see Figure \ref{fig:limits}). As well as showing the upper limit for no detections in our sample, we also show the binary fraction upper limit assuming the HIP 92855 is a true binary system.  Our upper limits are strongest for mass-ratios $q \approx 0.1 - 0.15$, and are
+We set upper limits on the binary fraction of early B stars as a function of binary mass-ratio (see Figure \ref{paper1_fig:limits}). As well as showing the upper limit for no detections in our sample, we also show the binary fraction upper limit assuming the HIP 92855 is a true binary system.  Our upper limits are strongest for mass-ratios $q \approx 0.1 - 0.15$, and are
 about $20\%$. We compare our limits to the intrinsic binary mass-ratio distribution for O-type primaries derived by \cite{Sana2012}, as well as the lower limit \emph{average} binary fraction seen by \cite{Evans2011} for late B-stars (B4-B9). Our strongest upper limits ($0.1 \leq q \leq 0.15$) fall in between these two previous studies.
 
 Companion stars formed by circumstellar disk instability are expected to have
@@ -948,7 +948,7 @@ Archive Facility. Funding for this work was provided by a National Science Found
 %orbit we are sensitive to, assuming a seeing of 0.8''}
 %      \end{supertabular}
 
-        \label{tab:sample}
+        \label{paper1_tab:sample}
 \end{longtable}
 \end{small}
 %\end{center}
@@ -999,7 +999,7 @@ Archive Facility. Funding for this work was provided by a National Science Found
         2385.98   &   H$_2$O   &   6.051\e{-23}   &   5.407\e{-23}
         
         
-    \label{tab:linelist}
+    \label{paper1_tab:linelist}
   \end{longtable}
 %\end{center}
   
@@ -1008,7 +1008,7 @@ Archive Facility. Funding for this work was provided by a National Science Found
 %\begin{center}
  \begin{small}
    \begin{longtable}{|ccp{6cm}|}
-      \caption{Summary of Cross-Correlation Function Peak Rejection Steps. See Section \ref{sec:results} for more information} \\
+      \caption{Summary of Cross-Correlation Function Peak Rejection Steps. See Section \ref{paper1_sec:results} for more information} \\
         \hline
         Step  & Description & Method \\ \hline
         \endfirsthead
@@ -1035,7 +1035,7 @@ Archive Facility. Funding for this work was provided by a National Science Found
         candidate temperature can exist as close to the primary B-star as the velocity indicates (assumes circular orbit)
         
         
-    \label{tab:rejection}
+    \label{paper1_tab:rejection}
   \end{longtable}
  \end{small}
 %\end{center}
@@ -1046,7 +1046,7 @@ Archive Facility. Funding for this work was provided by a National Science Found
 \begin{longtable}[t]{|lcccc|}
 
 \caption{Summary of HIP 92855 observations. Significance is in units of
-  the standard deviation of the cross-correlation function. The detection rate and expected significances are from the sensitivity analysis (Table \ref{tab:rejection}, step 2).} \\
+  the standard deviation of the cross-correlation function. The detection rate and expected significances are from the sensitivity analysis (Table \ref{paper1_tab:rejection}, step 2).} \\
 \hline
 Date & Detection Rate & Expected Significance & Observed Significance
 & Velocity (km s$^{-1}$) \\ \hline
@@ -1071,7 +1071,7 @@ Date & Detection Rate & Expected Significance & Observed Significance
 2007 September 16 & 0.82 & 4.2 $\sigma$ & N/A & N/A \\
 2008 September 19 & 0.71 & 3.4 $\sigma$ & 4.1 $\sigma$ & -126 \\
 2008 September 10 & 0.59 & 3.3 $\sigma$ & 4.0 $\sigma$ & 116 
-\label{tab:hip92855}
+\label{paper1_tab:hip92855}
 \end{longtable}
 %\end{center}  
 \end{samepage}
